Google analytics and meta data

--- a/index.html
+++ b/index.html
@@ -1,13 +1,48 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jonas Petrikas - Custom Web solutions</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/code-decor.webp" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Basic Meta -->
+  <title>Freelance Web Developer in Lithuania | Jonas Petrikas</title>
+  <meta name="description"
+    content="Jonas Petrikas – freelance web developer specializing in React, Symfony, and WordPress. I create high-quality business websites and custom web applications that drive results." />
+  <meta name="keywords"
+    content="freelance web developer, Lithuania web developer, React developer, Symfony developer, WordPress expert, custom websites, business websites, web apps" />
+  <meta name="author" content="Jonas Petrikas" />
+
+  <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+  <meta property="og:title" content="Freelance Custom Web Developer in Lithuania | Jonas Petrikas" />
+  <meta property="og:description"
+    content="I build modern websites and web applications using React, Symfony, and WordPress. Let's create something that drives real business results." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://jonaspetrikas.com/" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Freelance Web Developer in Lithuania | Jonas Petrikas" />
+  <meta name="twitter:description"
+    content="I build high-quality websites with React, Symfony, and WordPress that deliver business results." />
+  <meta name="twitter:image" content="https://jonaspetrikas.com/og-image.jpg" />
+
+  <title>Jonas Petrikas - Custom Web Solutions</title>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-D5HR7EPPZ9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-D5HR7EPPZ9');
+  </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
