Meta, translation and responsiveness

--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
 <!doctype html>
-<html lang="en">
+<html lang="lt">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/code-decor.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="manifest" href="/site.webmanifest" />
   <!-- Basic Meta -->
-  <title>Freelance Web Developer in Lithuania | Jonas Petrikas</title>
+  <title>Jonas Petrikas | Freelance svetainių kūrėjas</title>
   <meta name="description"
-    content="Jonas Petrikas – freelance web developer specializing in React, Symfony, and WordPress. I create high-quality business websites and custom web applications that drive results." />
+    content="Jonas Petrikas – laisvai samdomas (freelance) svetainių kūrėjas dirbantis su React ir WordPress. Kuriu aukštos kokybės verslo tinklapius bei web aplikacijas, kurios neša rezultatus" />
   <meta name="keywords"
-    content="freelance web developer, Lithuania web developer, React developer, Symfony developer, WordPress expert, custom websites, business websites, web apps" />
+    content="freelance programuotojas, Jonas Petrikas, svetainės lietuvoje, React programuotojas, WordPress ekspertas, individualūs tinklapiai, verslo svetainės, web aplikacijos" />
   <meta name="author" content="Jonas Petrikas" />
 
   <!-- Open Graph (Facebook, LinkedIn, etc.) -->
-  <meta property="og:title" content="Freelance Custom Web Developer in Lithuania | Jonas Petrikas" />
+  <meta property="og:title" content="Jonas Petrikas | Freelance svetainių kūrėjas" />
   <meta property="og:description"
-    content="I build modern websites and web applications using React, Symfony, and WordPress. Let's create something that drives real business results." />
+    content="Jonas Petrikas – laisvai samdomas (freelance) svetainių kūrėjas dirbantis su React ir WordPress. Kuriu aukštos kokybės verslo tinklapius bei web aplikacijas, kurios neša rezultatus" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://jonaspetrikas.com/" />
+  <meta property="og:image" content="https://jonaspetrikas.com/images/Jonas.webp" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Freelance Web Developer in Lithuania | Jonas Petrikas" />
+  <meta name="twitter:title" content="Jonas Petrikas | Freelance svetainių kūrėjas" />
   <meta name="twitter:description"
-    content="I build high-quality websites with React, Symfony, and WordPress that deliver business results." />
-  <meta name="twitter:image" content="https://jonaspetrikas.com/og-image.jpg" />
+    content="Jonas Petrikas – laisvai samdomas (freelance) svetainių kūrėjas dirbantis su React ir WordPress. Kuriu aukštos kokybės verslo tinklapius bei web aplikacijas, kurios neša rezultatus" />
+  <meta name="twitter:image" content="https://jonaspetrikas.com/images/Jonas.webp" />
 
-  <title>Jonas Petrikas - Custom Web Solutions</title>
 </head>
 
 <body>
